fixed hieght issue on mobile canvas

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,10 @@ a:visited {
   color: #bdc3c7;
 }
 
-canvas {
-  width: inherit !important;
-  min-height: 644px !important;
+canvas { 
+  height: 100vh; 
+  width: 100vw; 
+  display: block;
 }
 
 .credit {
